<resources>
    <string name="app_name">fyp1</string>
    <string name="secure_safe_img">Secure Safe</string>
    <string name="illustration_im" />
    <string name="btn_register">REGISTER</string>
    <string name="illustration_img">Illustration Image</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>


    <string name="login_sub_title">
        <font color="#00C9B8"><b>Login</b></font>
        if you already have an account.
    </string>
    <string name="login_email">Your email</string>
    <string name="login_password">Your password</string>
    <string name="login_forget_pw">Forgot Password</string>
    <string name="login_havent_account">
        I don\'t haven an account
        <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>

    <string name="register_sub_title">
        <font color="#00C9B8"><b>Register</b></font>
        to get start with the app.
    </string>

    <string name="register_fullname">Your fullname</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_your_password">Input your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="already_and_login">
        I already have an account
        <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="btn_logout">Logout</string>
</resources>